# 1. 빌드 시스템 설정 (대부분의 경우 그대로 사용)
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 2. 프로젝트 핵심 정보
[project]
# pip install topquant-ksk 처럼 사용될 패키지 이름
name = "topquant-ksk"
version = "0.1.22"
authors = [
  { name="SungKyeol" },
]
description = "기관 투자자를 위한 파이썬 퀀트 투자 백테스팅 및 분석 도구"
requires-python = ">=3.10"
license = { file="LICENSE" }
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

# 선택적 의존성 (pip install topquant-ksk[db] 또는 [plot] 또는 [all])
[project.optional-dependencies]
db = ["xlwings", "polars", "sqlalchemy", "psycopg2-binary", "connectorx"]
plot = ["matplotlib", "seaborn"]
all = ["topquant-ksk[db]", "topquant-ksk[plot]"]

# 3. 관련 링크 정보 (PyPI 페이지에 표시됨)
[project.urls]
"Homepage" = "https://github.com/SungKyeol/topquant-ksk"
"Bug Tracker" = "https://github.com/SungKyeol/topquant-ksk/issues"

# 4. 소스코드 위치 지정
[tool.setuptools.packages.find]
where = ["src"]